<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical">




        <TextView
            android:id="@+id/assignInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:text="@string/nathan_cobb_5_18_18"/>


        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_your_name"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:inputType="text"/>


        <TextView
            android:id="@+id/form_birthSpin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp"
            android:textSize="17sp"
            android:text="@string/please_select_your_birthdate"/>


        <DatePicker
            android:id="@+id/dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="68dp"
            android:layout_marginTop="15dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"/>



        <EditText
            android:id="@+id/occupationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_your_occupation"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:inputType="text"/>



        <EditText
            android:id="@+id/occupation2EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_describe_yourself"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:inputType="text"/>


        <Button
            android:id="@+id/loginBtn"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:onClick="onLogin"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text=""
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_gravity="end"
            android:gravity="center_horizontal|bottom"/>

        <Button
            android:id="@+id/secondActivityBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_to_see_your_profile"
            android:onClick="goToSecondActivity"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"/>


    </LinearLayout>
</ScrollView>

