...
    <string name="age">Age</string>
    <string name="description">Description</string>
    <string name="please_select_your_birthdate">Please select your birthdate.</string>
    <string name="submit">Submit</string>
    <string name="Welcome">Welcome: %s</string>
    <string name="Logout">Logout</string>
    <string name="nathan_cobb_4_24_18">Nathan Cobb 4-24-18</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_occupation">Please enter your occupation</string>
    <string name="please_describe_yourself">Please describe yourself</string>
    <string name="log_in">Log in</string>
    <string name="profile">Profile</string>
    <string name="matches">Matches</string>
...
